Fixed calendar table alignment in IE.

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime.css
@@ -302,7 +302,7 @@ table.iceSelInpDate tbody tr td table{
 /* the day text */
     text-decoration: none;
     background-color: #FFFFFF;
-    border: 1px solid #FFFFFF;
+    /*border: 1px solid #FFFFFF;*/
     color: #000000;
     width: 100%;
     height: 100%;
