--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
@@ -218,7 +218,7 @@ input.iceSelInpDateClosePopup {
 /* the day text */
     text-decoration: none;
     background-color: #FFFFFF;
-    border: 1px solid #FFFFFF;
+    /*border: 1px solid #FFFFFF;*/
     color: #000000;
     width: 100%;
     height: 100%;
